--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<div id="spotlight" class="animated fadeIn">
 		<div id="home-center">
 			<h1 id="home-title">U11</h1>
-			<p id="home-subtitle">Vanløse Floorball</p>
+			<p id="home-subtitle">Vanløse Frederiksberg Floorball</p>
 			<div id="home-social">
 				<a href="https://www.facebook.com/groups/177818905972394/" target="_blank" rel="noopener me" title="Facebook"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg></a>
 			</div>
@@ -50,9 +50,7 @@
 				<a href="https://staunsholm.github.io/kontakt/">Kontakt</a>
 				<a href="https://staunsholm.github.io/kampe/">Kampe</a>
 				<a href="https://staunsholm.github.io/tider/">Træningstider</a>
-				<a href="https://staunsholm.github.io/tr%C3%A6ningen/">Træningen</a>
-				<a href="https://staunsholm.github.io/klubben/">Klubben</a>
-				<a href="https://staunsholm.github.io/%C3%B8velser/">Øvelser</a>
+				<a href="https://staunsholm.github.io/klubben/">Klubberne</a>
 			</nav>
 		</div>
 		<div id="home-footer">
