--- a/tider/index.html
+++ b/tider/index.html
@@ -61,9 +61,7 @@ Vanløse Hallerne, Hal 1 Lønstrupvej 4, 2720 København Falkonergårdens Gymnas
 					<a href="https://staunsholm.github.io/kontakt/">Kontakt</a>
 					<a href="https://staunsholm.github.io/kampe/">Kampe</a>
 					<a href="https://staunsholm.github.io/tider/">Træningstider</a>
-					<a href="https://staunsholm.github.io/tr%C3%A6ningen/">Træningen</a>
-					<a href="https://staunsholm.github.io/klubben/">Klubben</a>
-					<a href="https://staunsholm.github.io/%C3%B8velser/">Øvelser</a>
+					<a href="https://staunsholm.github.io/klubben/">Klubberne</a>
 				</nav>
 			</div>
 			<div class="hdr-right hdr-icons">
@@ -78,9 +76,7 @@ Vanløse Hallerne, Hal 1 Lønstrupvej 4, 2720 København Falkonergårdens Gymnas
 			<li><a href="https://staunsholm.github.io/kontakt/">Kontakt</a></li>
 			<li><a href="https://staunsholm.github.io/kampe/">Kampe</a></li>
 			<li><a href="https://staunsholm.github.io/tider/">Træningstider</a></li>
-			<li><a href="https://staunsholm.github.io/tr%C3%A6ningen/">Træningen</a></li>
-			<li><a href="https://staunsholm.github.io/klubben/">Klubben</a></li>
-			<li><a href="https://staunsholm.github.io/%C3%B8velser/">Øvelser</a></li>
+			<li><a href="https://staunsholm.github.io/klubben/">Klubberne</a></li>
 		</ul>
 	</div>
 
