--- a/træningen/index.html
+++ b/træningen/index.html
@@ -55,9 +55,7 @@
 					<a href="https://staunsholm.github.io/kontakt/">Kontakt</a>
 					<a href="https://staunsholm.github.io/kampe/">Kampe</a>
 					<a href="https://staunsholm.github.io/tider/">Træningstider</a>
-					<a href="https://staunsholm.github.io/tr%C3%A6ningen/">Træningen</a>
-					<a href="https://staunsholm.github.io/klubben/">Klubben</a>
-					<a href="https://staunsholm.github.io/%C3%B8velser/">Øvelser</a>
+					<a href="https://staunsholm.github.io/klubben/">Klubberne</a>
 				</nav>
 			</div>
 			<div class="hdr-right hdr-icons">
@@ -72,9 +70,7 @@
 			<li><a href="https://staunsholm.github.io/kontakt/">Kontakt</a></li>
 			<li><a href="https://staunsholm.github.io/kampe/">Kampe</a></li>
 			<li><a href="https://staunsholm.github.io/tider/">Træningstider</a></li>
-			<li><a href="https://staunsholm.github.io/tr%C3%A6ningen/">Træningen</a></li>
-			<li><a href="https://staunsholm.github.io/klubben/">Klubben</a></li>
-			<li><a href="https://staunsholm.github.io/%C3%B8velser/">Øvelser</a></li>
+			<li><a href="https://staunsholm.github.io/klubben/">Klubberne</a></li>
 		</ul>
 	</div>
 
