--- a/øvelser/index.html
+++ b/øvelser/index.html
@@ -55,6 +55,7 @@
 					<a href="https://staunsholm.github.io/kontakt/">Kontakt</a>
 					<a href="https://staunsholm.github.io/kampe/">Kampe</a>
 					<a href="https://staunsholm.github.io/tider/">Træningstider</a>
+					<a href="https://staunsholm.github.io/tr%C3%A6ningen/">Træningen</a>
 					<a href="https://staunsholm.github.io/klubben/">Klubberne</a>
 				</nav>
 			</div>
@@ -70,6 +71,7 @@
 			<li><a href="https://staunsholm.github.io/kontakt/">Kontakt</a></li>
 			<li><a href="https://staunsholm.github.io/kampe/">Kampe</a></li>
 			<li><a href="https://staunsholm.github.io/tider/">Træningstider</a></li>
+			<li><a href="https://staunsholm.github.io/tr%C3%A6ningen/">Træningen</a></li>
 			<li><a href="https://staunsholm.github.io/klubben/">Klubberne</a></li>
 		</ul>
 	</div>
