--- a/hjul/index.html
+++ b/hjul/index.html
@@ -61,6 +61,7 @@ August - September  Teknik: Simple øvelser (pasninger, skud, forhånd/baghånd)
 					<a href="https://staunsholm.github.io/kontakt/">Kontakt</a>
 					<a href="https://staunsholm.github.io/kampe/">Kampe</a>
 					<a href="https://staunsholm.github.io/tider/">Træningstider</a>
+					<a href="https://staunsholm.github.io/tr%C3%A6ningen/">Træningen</a>
 					<a href="https://staunsholm.github.io/klubben/">Klubberne</a>
 				</nav>
 			</div>
@@ -76,6 +77,7 @@ August - September  Teknik: Simple øvelser (pasninger, skud, forhånd/baghånd)
 			<li><a href="https://staunsholm.github.io/kontakt/">Kontakt</a></li>
 			<li><a href="https://staunsholm.github.io/kampe/">Kampe</a></li>
 			<li><a href="https://staunsholm.github.io/tider/">Træningstider</a></li>
+			<li><a href="https://staunsholm.github.io/tr%C3%A6ningen/">Træningen</a></li>
 			<li><a href="https://staunsholm.github.io/klubben/">Klubberne</a></li>
 		</ul>
 	</div>
