--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -64,6 +64,7 @@ Jesper Malm  "/>
 					<a href="https://staunsholm.github.io/kontakt/">Kontakt</a>
 					<a href="https://staunsholm.github.io/kampe/">Kampe</a>
 					<a href="https://staunsholm.github.io/tider/">Træningstider</a>
+					<a href="https://staunsholm.github.io/tr%C3%A6ningen/">Træningen</a>
 					<a href="https://staunsholm.github.io/klubben/">Klubberne</a>
 				</nav>
 			</div>
@@ -79,6 +80,7 @@ Jesper Malm  "/>
 			<li><a href="https://staunsholm.github.io/kontakt/">Kontakt</a></li>
 			<li><a href="https://staunsholm.github.io/kampe/">Kampe</a></li>
 			<li><a href="https://staunsholm.github.io/tider/">Træningstider</a></li>
+			<li><a href="https://staunsholm.github.io/tr%C3%A6ningen/">Træningen</a></li>
 			<li><a href="https://staunsholm.github.io/klubben/">Klubberne</a></li>
 		</ul>
 	</div>
